base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
  labels:
    app: nginx-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 8080 # Expose the container on port 8080
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
          volumeMounts:
            - name: data-volume # Mount the volume named `data-volume` from the PersistentVolumeClaim
              mountPath: /usr/share/nginx/html # Mount the volume to the container's `/usr/share/nginx/html` directory
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: my-pvc
